--- a/cssStyle.css
+++ b/cssStyle.css
@@ -183,3 +183,28 @@
     body.modal-open {
       overflow: hidden;
     }
+    .navbar-toggler {
+      padding: 10px 15px; /* Adjust padding to make it smaller */
+      font-size: 12px;   /* Optional: adjust font size */
+    }
+    
+    .navbar-toggler-icon {
+      width: 15px; /* Adjust icon width */
+      height: 10px; /* Adjust icon height */
+    }
+    .nav-link{
+      background-color: #0c60b4; border-radius: 5px; padding-left: 10px; padding-right: 10px; padding-top: 1px; padding-bottom: 1px;
+      width : auto; /* Set a fixed width for the nav-link */
+      height: auto;
+      max-width: fit-content;
+    }
+    .nav-link:hover {
+      background-color: #0a4f8c; /* Darker shade on hover */
+    }
+    .navbar-brand:hover {
+      background-color: #021e35; /* Darker shade on hover */
+    }
+    .navbar-brand
+    {
+      background-color: #062544; border-radius: 5px; padding-left: 10px; padding-right: 13px; padding-top: 1px; padding-bottom: 1px;
+    }
